<resources>
    <string name="app_name">Nigareshat</string>
    <string name="online_books_shopping_store_all_india_and_all_country">Online Bookstore Your destination for a selection of books, delivered to your doorstep in India! Discover your favorite Book!</string>
    <string name="online_books_shopping_store_all_india_and_all_country_delivery">Maktabe Farooq brings you the best of Indian literature, from classic tales to modern reads. Explore our diverse collection, available both online and in-store. Thank you for choosing us for your reading journey!"</string>
    <string name="mobile_91_8779780623"><b>Mobile:</b> +91 8791519573</string>
    <string name="gmail"><b>Email:</b> <u><font color="#0000EE">nigareshat@gmail.com</font></u></string>
    <string name="website"><b>Website:</b> www.nigareshat.com</string>
    <string name="head_office"><b>Head office:</b> Deoband, Delhi, India</string>
    <string name="mohammed_inamullah_hasan">Customer Name</string>
    <string name="ship_date">Ship Date</string>
    <string name="ship_amount">Ship Amount</string>
    <string name="ship_via">Ship Via</string>
    <string name="total_price">Total Price</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="total">Total</string>
    <string name="book_name">Book Name</string>
    <string name="discount">Discount</string>
    <string name="amount">Amount</string>
    <string name="quantity">Quantity</string>
    <string name="customer_name">Customer Name</string>
    <string name="shipping_via">Shipping Via</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="customer_billing_details">Customer Billing Details:</string>
    <string name="book_details">Book Details:</string>
    <string name="download">Download</string>
    <string name="add_more">Add More</string>
    <string name="rs">Rs.</string>
    <string name="sn">SN</string>
    <string name="qty">Qty</string>
    <string name="disc">Disc</string>
    <string name="amt">Amt</string>
    <string name="indian_post_office">Indian post office</string>
    <string name="all_receipts">All Receipts</string>
    <string name="item">Item</string>
</resources>