<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="2dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/book_details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!-- Item Name input -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ship_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_btn_bg"
                android:hint="@string/book_name"
                android:inputType="text"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <!-- Quantity dropdown -->
                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="157dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/quantity"
                    android:padding="14dp">

                    <Spinner
                        android:id="@+id/quantitySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/quantity_array"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Price input -->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <!-- Price input -->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/discount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/discount"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <!-- Price input -->
                <TextView
                    android:id="@+id/amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_btn_bg"
                    android:padding="14dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>