<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.nigareshat.app.ui.main.DataEntryActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/history"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingEnd="7dp"
            android:layout_gravity="right"
            android:background="@drawable/download_bg"
            android:padding="5dp"
            android:src="@drawable/history" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="236dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:src="@drawable/logo"
            app:tint="@color/app_color" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:cardElevation="2dp"
            app:strokeColor="@color/app_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/cardo_bold"
                    android:paddingStart="5dp"
                    android:text="@string/customer_billing_details"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <!-- Bill To input -->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/customer_name"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/quantity"
                    android:padding="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Spinner
                        android:id="@+id/ShippingViaSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/courier_names"
                        android:textColorHint="@color/gray" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/shipAmountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_btn_bg"
                    android:hint="@string/ship_amount"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/cardo_bold"
            android:paddingStart="10dp"
            android:text="@string/book_details"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- Initially Visible Block -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="1"
            tools:listitem="@layout/book_list_single_item" />

        <!-- Add More Button -->

        <TextView
            android:id="@+id/addMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="2dp"
            android:drawableStart="@drawable/baseline_add_24"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/add_more"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/BtnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/cardo"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>