<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardElevation="2dp"
    android:layout_marginBottom="10dp"
    app:strokeColor="@color/app_color"
    app:strokeWidth="1dp">
    <ImageView
        android:id="@+id/remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:elevation="10dp"
        android:paddingStart="5dp"
        android:paddingBottom="10dp"
        android:src="@drawable/remove" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Item Name input -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_btn_bg"
            android:hint="@string/book_name"
            android:inputType="text"
            android:padding="11dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <!-- Quantity dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textQuantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_btn_bg"
                android:hint="@string/quantity"
                android:padding="11dp"
                app:layout_constraintEnd_toStartOf="@id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/quantitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/quantity_array"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Price input -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_btn_bg"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="11dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textQuantity"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <!-- Discount input -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/discount"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_btn_bg"
                android:hint="@string/discount"
                android:inputType="numberDecimal"
                android:padding="11dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toStartOf="@id/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Amount Display -->
            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_btn_bg"
                android:padding="11dp"
                android:gravity="center_vertical"
                android:text="@string/rs"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/discount"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>